--- a/index.html
+++ b/index.html
@@ -9,42 +9,46 @@
 </head>
 <body>
     <div class="header">
-        <div class="top-links">
-            <h3>Header Logo</h3>
-            <ul>
-                <li><a href="#">Header Link 1</a></li>
-                <li><a href="#">Header Link 2</a></li>
-                <li><a href="#">Header Link 3</a></li>
-            </ul>
-        </div>
-        <div class="header-content">
-            <div class="header-left">
-                <h1>This Website is Awesome</h1>
-                <span class="subtext">This website has some subtext that goes here under the main title. It's a smaller font with lower contrast.</span>
-                <button class="sign-up">Sign Up</button>
+        <div class="container">
+            <div class="top-links">
+                <h3>Header Logo</h3>
+                <ul>
+                    <li><a href="#">Header Link 1</a></li>
+                    <li><a href="#">Header Link 2</a></li>
+                    <li><a href="#">Header Link 3</a></li>
+                </ul>
             </div>
-            <div class="header-right"><img src=""></div>
+            <div class="header-content">
+                <div class="header-left">
+                    <h1>This Website is Awesome</h1>
+                    <p class="subtext">This website has some subtext that goes here under the main title. It's a smaller font with lower contrast.</p>
+                    <button class="sign-up">Sign Up</button>
+                </div>
+                <div class="header-right"><img class="img-thumb" src="images/guitars2.jpg"></div>
+            </div>
         </div>
     </div>
     <div class="content">
-        <h2>Some Random Information</h2>
-        <div class="items">
-            <ul>
-                <li><div class="item"><img src="#"><span>This is some subtext under an image</span></div></li>
-                <li><div class="item"><img src="#"><span>This is some subtext under an image</span></div></li>
-                <li><div class="item"><img src="#"><span>This is some subtext under an image</span></div></li>
-                <li><div class="item"><img src="#"><span>This is some subtext under an image</span></div></li>
-            </ul>
-        </div>
-        <div class="quote-area">
-            <p class="quote">This is an inspiring quote or a testimonial from a customer. Maybe it's filling up space, or maybe it will actually be read. Who knows? But i think it looks nice.</p>
-            <p class="quote-ref"></p>
-        </div>
-        <div class="call-to-action">
-            <div class="call-box">
-                <h3>Call to action! It's time!</h3>
-                <p>Sign up for our products by clicking that button right over there!</p>
-                <button class="sign-up">Sign up</button>
+        <div class="container">
+            <h2>Some Random Information</h2>
+            <div class="items">
+                <ul>
+                    <li><div class="item"><img src="#"><span>This is some subtext under an image</span></div></li>
+                    <li><div class="item"><img src="#"><span>This is some subtext under an image</span></div></li>
+                    <li><div class="item"><img src="#"><span>This is some subtext under an image</span></div></li>
+                    <li><div class="item"><img src="#"><span>This is some subtext under an image</span></div></li>
+                </ul>
+            </div>
+            <div class="quote-area">
+                <p class="quote">This is an inspiring quote or a testimonial from a customer. Maybe it's filling up space, or maybe it will actually be read. Who knows? But i think it looks nice.</p>
+                <p class="quote-ref"></p>
+            </div>
+            <div class="call-to-action">
+                <div class="call-box">
+                    <h3>Call to action! It's time!</h3>
+                    <p>Sign up for our products by clicking that button right over there!</p>
+                    <button class="sign-up">Sign up</button>
+                </div>
             </div>
         </div>
     </div>
