Main content area icons added

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             <h2>Some Random Information</h2>
             <div class="items">
                 <ul>
-                    <li><div class="item"><img src="#"><span>This is some subtext under an image</span></div></li>
-                    <li><div class="item"><img src="#"><span>This is some subtext under an image</span></div></li>
-                    <li><div class="item"><img src="#"><span>This is some subtext under an image</span></div></li>
-                    <li><div class="item"><img src="#"><span>This is some subtext under an image</span></div></li>
+                    <li><div class="item"><img src="/images/guitars3.png"><p>This is some subtext under an image</p></div></li>
+                    <li><div class="item"><img src="/images/guitars4.png"><p>This is some subtext under an image</p></div></li>
+                    <li><div class="item"><img src="/images/guitars5.png"><p>This is some subtext under an image</p></div></li>
+                    <li><div class="item"><img src="/images/guitars6.png"><p>This is some subtext under an image</p></div></li>
                 </ul>
             </div>
             <div class="quote-area">
