ver 1.0 - finished call out and footer

--- a/index.html
+++ b/index.html
@@ -70,15 +70,14 @@
         <p class="quote-citation">Thor - God of Thunder</p>
       </div>
     </div>
-    <div class="call-to-action">
+    <div class="call-out">
       <div class="call-box">
-        <h3>Call to action! It's time!</h3>
-        <p>Sign up for our products by clicking that button right over there!</p>
+        <p><span class="call-heading">Call to action! It's time!</span>Sign up for our products by clicking that button right over there!</p>
         <button class="sign-up">Sign up</button>
       </div>
     </div>
     <div class="footer">
-      <span>Copyright © Oliver Brown</span>
+      <span>Copyright © Olly Brown</span>
     </div>
   </body>
 </html>
